--- a/Team_3/src/main/resources/application.properties
+++ b/Team_3/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/bookstorespring
+spring.application.name=UPT_PL.Team_3
+spring.datasource.url = jdbc:mysql://localhost:3306/Team_3
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password = password
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto = update
