--- a/Team_3/src/main/resources/application.properties
+++ b/Team_3/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=UPT_PL.Team_3
-spring.datasource.url = jdbc:mysql://localhost:3306/Team_3
+spring.datasource.url = jdbc:mysql://localhost:3307/Team_3
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password = password
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
