--- a/Team_3_GraphUI/pom.xml
+++ b/Team_3_GraphUI/pom.xml
@@ -47,6 +47,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.36</version>
+		</dependency>
+		
 	</dependencies>
 
 	
